welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:42: error: Unit does not take parameters
motif()
     ^